force-app/main/default/objects/Contract/fields/Obligor__c.field-meta.xml
<CustomField>
    <fullName>Obligor__c</fullName>
    <inlineHelpText>Enter the relevant Obligor IDs</inlineHelpText>
    <label>Obligor</label>
    <type>TextArea</type>
</CustomField>