force-app/main/default/objects/Contract/fields/of_Addendum__c.field-meta.xml
<CustomField>
    <fullName>of_Addendum__c</fullName>
    <formula>SBQQ__Quote__r.of_Addendum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Addendum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>