force-app/main/default/objects/Contract/fields/of_Change_Orders__c.field-meta.xml
<CustomField>
    <fullName>of_Change_Orders__c</fullName>
    <formula>SBQQ__Quote__r.of_Change_Orders__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Change Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>