force-app/main/default/objects/Contract/fields/Onboarded__c.field-meta.xml
<CustomField>
    <fullName>Onboarded__c</fullName>
    <formula>Account.Onboarded__c</formula>
    <label>Onboarded?</label>
    <type>Checkbox</type>
</CustomField>