force-app/main/default/objects/Contract/fields/Orginal_Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Orginal_Contract_Amount__c</fullName>
    <label>Orginal Contract Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>