force-app/main/default/objects/Contract/fields/Parts_Aging_Order__c.field-meta.xml
<CustomField>
    <fullName>Parts_Aging_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>OEM and TPA Only (Replacement Parts Section)</inlineHelpText>
    <label>Parts Aging Order</label>
    <type>Checkbox</type>
</CustomField>