force-app/main/default/objects/Contract/fields/Parts_Language__c.field-meta.xml
<CustomField>
    <fullName>Parts_Language__c</fullName>
    <inlineHelpText>Are there additional rules around parts purchasing in the contract?</inlineHelpText>
    <label>Parts Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>