force-app/main/default/objects/Contract/fields/Parts_Language_Clause__c.field-meta.xml
<CustomField>
    <fullName>Parts_Language_Clause__c</fullName>
    <inlineHelpText>Enter the parts purchasing rules from the contract</inlineHelpText>
    <label>Parts Language Clause</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>