force-app/main/default/objects/Contract/fields/Parts_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Parts_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Pricing Exhibit</inlineHelpText>
    <label>Parts Pricing</label>
    <type>Checkbox</type>
</CustomField>