force-app/main/default/objects/Contract/fields/Price_Change__c.field-meta.xml
<CustomField>
    <fullName>Price_Change__c</fullName>
    <description>Renewal</description>
    <label>Price Change</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>