force-app/main/default/objects/Contract/fields/Pricing_Details__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Details__c</fullName>
    <inlineHelpText>NCM to enter any special pricing details.</inlineHelpText>
    <label>Pricing Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>