force-app/main/default/objects/Contract/fields/Proc_Ids__c.field-meta.xml
<CustomField>
    <fullName>Proc_Ids__c</fullName>
    <inlineHelpText>Enter the relevant Proc-Ids</inlineHelpText>
    <label>Proc-Ids</label>
    <type>TextArea</type>
</CustomField>