force-app/main/default/objects/Contract/fields/Process_Change__c.field-meta.xml
<CustomField>
    <fullName>Process_Change__c</fullName>
    <description>Renewal</description>
    <label>Process Change</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>