force-app/main/default/objects/Contract/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Must be a Project Manager Team Member</inlineHelpText>
    <label>Project Manager</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Can only be a user on the Project Management Team</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Project</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts3</relationshipName>
    <type>Lookup</type>
</CustomField>