force-app/main/default/objects/Contract/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <inlineHelpText>This is the contract number generated in SCAMP</inlineHelpText>
    <label>Proposal #</label>
    <length>8</length>
    <type>Text</type>
</CustomField>