force-app/main/default/objects/Contract/fields/Referral_Fee__c.field-meta.xml
<CustomField>
    <fullName>Referral_Fee__c</fullName>
    <inlineHelpText>Select whether a Referral Fee is included in the Contract.</inlineHelpText>
    <label>Referral Fee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>