force-app/main/default/objects/Contract/fields/Referral_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Referral_Fee_Amount__c</fullName>
    <inlineHelpText>Currency Field</inlineHelpText>
    <label>Referral Fee Amount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>