force-app/main/default/objects/Contract/fields/Referral_Fee_or_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Referral_Fee_or_Rebate__c</fullName>
    <formula>TEXT(BRD__r.Referral_Fee_or_Rebate__c)</formula>
    <label>Referral Fee or Rebate</label>
    <type>Text</type>
</CustomField>