force-app/main/default/objects/Contract/fields/Referral_Fee_Rebate_Language__c.field-meta.xml
<CustomField>
    <fullName>Referral_Fee_Rebate_Language__c</fullName>
    <inlineHelpText>NCM to enter the final approved contract language related to Rebates or Referral Fees.</inlineHelpText>
    <label>Referral Fee/Rebate Language</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>