force-app/main/default/objects/Contract/fields/Release_Orders__c.field-meta.xml
<CustomField>
    <fullName>Release_Orders__c</fullName>
    <label>Release Orders</label>
    <summaryForeignKey>Order.ContractId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>