force-app/main/default/objects/Contract/fields/Retail_Parts_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Retail_Parts_Pricing__c</fullName>
    <label>Retail Parts Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Retail - 10%</fullName>
            </value>
            <value>
                <fullName>Retail - 15%</fullName>
            </value>
            <value>
                <fullName>Retail - 20%</fullName>
            </value>
            <value>
                <fullName>Retail - 25%</fullName>
            </value>
            <value>
                <fullName>Retail - 30%</fullName>
            </value>
            <value>
                <fullName>Retail - 35%</fullName>
            </value>
            <value>
                <fullName>Retail - 40%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>