force-app/main/default/objects/Contract/fields/SBQQ__OpportunityPricebookId__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__OpportunityPricebookId__c</fullName>
    <description>ID of the Price Book used from the original Opportunity.</description>
    <formula>Opportunity__r.Pricebook2Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ID of the Price Book used from the original Opportunity.</inlineHelpText>
    <label>Opportunity Pricebook Id</label>
    <type>Text</type>
</CustomField>