force-app/main/default/objects/Contract/fields/SCOPES_ID__c.field-meta.xml
<CustomField>
    <fullName>SCOPES_ID__c</fullName>
    <externalId>true</externalId>
    <label>Contract SCOPES ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>