force-app/main/default/objects/Contract/fields/Sealed_System_Labor_Rate__c.field-meta.xml
<CustomField>
    <fullName>Sealed_System_Labor_Rate__c</fullName>
    <label>Sealed System Labor Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>