force-app/main/default/objects/Contract/fields/Sears_Signed_By_Email__c.field-meta.xml
<CustomField>
    <fullName>Sears_Signed_By_Email__c</fullName>
    <description>Used for DocuSign (Send to Customer)</description>
    <formula>CompanySigned.Email</formula>
    <label>Sears Signed By - Email</label>
    <type>Text</type>
</CustomField>