force-app/main/default/objects/Contract/fields/Sears_Signed_By_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Sears_Signed_By_Last_Name__c</fullName>
    <description>Used for DocuSign (Send to Customer)</description>
    <formula>CompanySigned.LastName</formula>
    <label>Sears Signed By - Last Name</label>
    <type>Text</type>
</CustomField>