force-app/main/default/objects/Contract/fields/Sears_Signed_Title__c.field-meta.xml
<CustomField>
    <fullName>Sears_Signed_Title__c</fullName>
    <description>Used for DocuSign (Send to Customer)</description>
    <formula>CompanySigned.Title</formula>
    <label>Sears Signed Title</label>
    <type>Text</type>
</CustomField>