force-app/main/default/objects/Contract/fields/Service_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Service_Attempt__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Servicer Charges or Pricing Exhibit Sections.  This language is different for OEM&#39;s</inlineHelpText>
    <label>Service Attempt</label>
    <type>Checkbox</type>
</CustomField>