force-app/main/default/objects/Contract/fields/Service_Attempt_Rate__c.field-meta.xml
<CustomField>
    <fullName>Service_Attempt_Rate__c</fullName>
    <label>Service Attempt Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>