force-app/main/default/objects/Contract/fields/Ship_To_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Name_1__c</fullName>
    <label>Ship To Name 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>