force-app/main/default/objects/Contract/fields/Ship_To_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Name_2__c</fullName>
    <label>Ship To Name 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>