force-app/main/default/objects/Contract/fields/SLAs__c.field-meta.xml
<CustomField>
    <fullName>SLAs__c</fullName>
    <label>SLAs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value 1</fullName>
            </value>
            <value>
                <fullName>Value 2</fullName>
            </value>
            <value>
                <fullName>Value 3</fullName>
            </value>
            <value>
                <fullName>Value 4</fullName>
            </value>
            <value>
                <fullName>Value 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>