force-app/main/default/objects/Contract/fields/Special_Labor_Rate__c.field-meta.xml
<CustomField>
    <fullName>Special_Labor_Rate__c</fullName>
    <label>Special Labor Rate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>