force-app/main/default/objects/Contract/fields/Special_Labor_Rate_Details__c.field-meta.xml
<CustomField>
    <fullName>Special_Labor_Rate_Details__c</fullName>
    <description>If Special Labor Rate = Yes, then a Description is required</description>
    <inlineHelpText>If Special Labor Rate = Yes, then a Description is required</inlineHelpText>
    <label>Special Labor Rate Details</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>