force-app/main/default/objects/Contract/fields/Special_Requirements_for_Payment__c.field-meta.xml
<CustomField>
    <fullName>Special_Requirements_for_Payment__c</fullName>
    <label>Special Requirements for Payment</label>
    <type>TextArea</type>
</CustomField>