force-app/main/default/objects/Contract/fields/Store_Stock_Labor_Rate__c.field-meta.xml
<CustomField>
    <fullName>Store_Stock_Labor_Rate__c</fullName>
    <label>Store Stock Labor Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>