force-app/main/default/objects/Contract/fields/Suspend_Service_for_Non_Payment__c.field-meta.xml
<CustomField>
    <fullName>Suspend_Service_for_Non_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Term Section</inlineHelpText>
    <label>Suspend Service for Non-Payment</label>
    <type>Checkbox</type>
</CustomField>