force-app/main/default/objects/Contract/fields/Terminated__c.field-meta.xml
<CustomField>
    <fullName>Terminated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the contract active or has it been terminated?</inlineHelpText>
    <label>Terminated</label>
    <type>Checkbox</type>
</CustomField>