force-app/main/default/objects/Contract/fields/Termination_Terms__c.field-meta.xml
<CustomField>
    <fullName>Termination_Terms__c</fullName>
    <label>Termination Terms</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>