force-app/main/default/objects/Contract/fields/Total_Approved_Contract_Changes__c.field-meta.xml
<CustomField>
    <fullName>Total_Approved_Contract_Changes__c</fullName>
    <formula>of_Addendum__c +  of_Change_Orders__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Approved Contract Changes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>