force-app/main/default/objects/Contract/fields/Type_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Sale__c</fullName>
    <label>Type of Sale</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Sales</fullName>
            </value>
            <value>
                <fullName>Appliance Select</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>Gift Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>