force-app/main/default/objects/Contract/fields/Unqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Reason__c</fullName>
    <label>Unqualified Reason</label>
    <length>250</length>
    <type>Text</type>
</CustomField>