force-app/main/default/objects/Contract/fields/Variable_Percent__c.field-meta.xml
<CustomField>
    <fullName>Variable_Percent__c</fullName>
    <inlineHelpText>Use this field to describe the tiered cut-offs and varaible percentage rebates applicable to this agreement.</inlineHelpText>
    <label>Variable Percent</label>
    <type>TextArea</type>
</CustomField>