force-app/main/default/objects/Contract/fields/Warranties_Disclaimers__c.field-meta.xml
<CustomField>
    <fullName>Warranties_Disclaimers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>30 Day is Recommended (Most OEM use 90 day).  Parts is normally 90 day.</inlineHelpText>
    <label>Warranties &amp; Disclaimers</label>
    <type>Checkbox</type>
</CustomField>