force-app/main/default/objects/Contract/fields/Who_Will_Pay__c.field-meta.xml
<CustomField>
    <fullName>Who_Will_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Servicer Charges Section</inlineHelpText>
    <label>Who Will Pay</label>
    <type>Checkbox</type>
</CustomField>