force-app/main/default/objects/Contract/recordTypes/Contract_CPQ.recordType-meta.xml
<RecordType>
    <fullName>Contract_CPQ</fullName>
    <active>true</active>
    <label>Contract CPQ</label>
</RecordType>