force-app/main/default/objects/Contract/validationRules/Contract_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Complete</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED( Status ) , TEXT(PRIORVALUE( Status ))==&quot;Complete&quot; )</errorConditionFormula>
    <errorMessage>The status of contract once completed, cannot be changed</errorMessage>
</ValidationRule>