force-app/main/default/objects/Contract/validationRules/Project_Cant_be_Created.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Cant_be_Created</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status, &quot;Create Project&quot;),
ISNULL ( Delivery_Date__c ))</errorConditionFormula>
    <errorDisplayField>Delivery_Date__c</errorDisplayField>
    <errorMessage>Projects can only be created when a delivery date has been populated.</errorMessage>
</ValidationRule>