force-app/main/default/objects/Contract/validationRules/Special_Labor_Rate.validationRule-meta.xml
<ValidationRule>
    <fullName>Special_Labor_Rate</fullName>
    <active>true</active>
    <description>If Special Labor Rate = Yes, then Special Labor Rate Details is Required.</description>
    <errorConditionFormula>AND( 
ISPICKVAL( Special_Labor_Rate__c , &quot;Yes&quot;), 
ISBLANK( Special_Labor_Rate_Details__c ) 
)</errorConditionFormula>
    <errorDisplayField>Special_Labor_Rate_Details__c</errorDisplayField>
    <errorMessage>Special Labor Rate = Yes, then Special Labor Rate Details is Required</errorMessage>
</ValidationRule>