force-app/main/default/objects/Contract/validationRules/Variable_percent.validationRule-meta.xml
<ValidationRule>
    <fullName>Variable_percent</fullName>
    <active>true</active>
    <description>If Percent = variable then variable percent is required.</description>
    <errorConditionFormula>AND(ISPICKVAL(Percent__c, &quot;Variable&quot;), ISBLANK(Variable_Percent__c))</errorConditionFormula>
    <errorDisplayField>Percent__c</errorDisplayField>
    <errorMessage>If Percent = variable then variable percent is required.</errorMessage>
</ValidationRule>