force-app/main/default/objects/Contract/listViews/AllContracts.listView-meta.xml
<ListView>
    <fullName>AllContracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>Contract_Administration_Status__c</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>Contract_End_Date__c</columns>
    <columns>CONTRACT.CREATED_DATE</columns>
    <columns>Business__c</columns>
    <columns>CONTRACT.RECORDTYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Contracts</label>
    <language>en_US</language>
</ListView>