force-app/main/default/objects/Contract/listViews/Contracts_for_Ken_Galubinski.listView-meta.xml
<ListView>
    <fullName>Contracts_for_Ken_Galubinski</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>Contract_End_Date__c</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>Contract_Administration_Status__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Approval_Status_DocuSign__c</columns>
    <columns>Approval_Status_Salesforce__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>kgalu</value>
    </filters>
    <label>Contracts for Ken Galubinski</label>
    <sharedTo>
        <group>HomeServicesBRDTeam</group>
    </sharedTo>
</ListView>